# BIOME

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
biome_lab/: __init__.py  __main__.py  main.py
biome_lab/behavior/: __init__.py  decision.py  herbivore_policy.py  perception.py  predator_policy.py  steering.py
biome_lab/config/: __init__.py  defaults.py  parameter_docs.py  schemas.py
biome_lab/entities/: __init__.py  base.py  creatures.py  herbivores.py  plants.py  predators.py
biome_lab/experiments/: __init__.py  protocol.py  runner.py
biome_lab/exports/: csv_export.py  json_export.py  markdown_export.py  service.py
biome_lab/metrics/: __init__.py  collector.py  definitions.py  time_series.py
biome_lab/rendering/: colors.py  overlays.py  renderer.py
biome_lab/simulation/: engine.py  events.py  rng.py  spatial_index.py  world.py
biome_lab/ui/: __init__.py  app.py  controls.py  inspector.py  panels.py  sandbox.py
presets/: default_experiment.json
scripts/: bench_headless.py
tests/: test_behavior.py  test_bench_headless.py  test_cli.py  test_config.py  test_exports.py  test_metrics.py  test_presets.py  test_simulation_extensions.py  test_spatial_index.py  test_world_state.py
